tests/ui/feature-gates/feature-gate-async-drop.stderr
error[E0658]: use of unstable library feature `async_drop`
  --> $DIR/feature-gate-async-drop.rs:3:5
   |
LL | use std::future::AsyncDrop;
   |     ^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #126482 <https://github.com/rust-lang/rust/issues/126482> for more information
   = help: add `#![feature(async_drop)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `async_drop`
  --> $DIR/feature-gate-async-drop.rs:13:5
   |
LL |     async fn drop(self: Pin<&mut Self>) {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #126482 <https://github.com/rust-lang/rust/issues/126482> for more information
   = help: add `#![feature(async_drop)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: use of unstable library feature `async_drop`
  --> $DIR/feature-gate-async-drop.rs:12:6
   |
LL | impl AsyncDrop for Foo {
   |      ^^^^^^^^^
   |
   = note: see issue #126482 <https://github.com/rust-lang/rust/issues/126482> for more information
   = help: add `#![feature(async_drop)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
